--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,10 @@
         <br>
         <div class="center text-big bold">
             Hi! I am denzzil and this is my first webapp.
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
+            <h4>A new heading </h4>
+            I have made some new local change
+            </div>
+            <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
