--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,7 +3,7 @@
 <title>
     Article One/Denzzil Jacob
 </title>    
-<meta name="viewport" content="width-device-width,initial scale=1"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
 <style>.container{max-width :800px;
 margin :0 auto;
 color :blue;
