--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,15 +4,14 @@
     Article One/Denzzil Jacob
 </title>    
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<style>.container{max-width :800px;
+<style>.container{max-width:800px;
 margin :0 auto;
 color :blue;
 font-family:sans-serif;}
-
 </style>    
 </head>    
 <body> 
-<divclass='container'>
+<divclass="container">
 <Div>
 <a href="/">Home</a>    
 </Div>
