[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,7 +2,7 @@
     Article Two/Denzzil Jacob
 </title>    
 <meta name="viewport" content="width-device-width,initial scale=1"/>
-    
+ <link href="/ui/style.css" rel="stylesheet" />    
 </head>    
 <body> 
 <Div>
