--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,11 +4,7 @@
     Article One/Denzzil Jacob
 </title>    
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<style>.container{max-width:800px;
-margin:0 auto;
-color:red;
-font-family:sans-serif;}
-</style>    
+ <link href="/ui/style.css" rel="stylesheet" />
 </head>    
 <body> 
 <divclass="container">
