[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,12 +7,13 @@
         <div class="container">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
-        <br>
+                <br>
         <div class="center text-big bold">
             Hi! I am denzzil and this is my first webapp.
             <h4>A new heading </h4>
             I have made some new local change
             </div>
+            <link href="/ui/style.css" rel="stylesheet" />
             <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
