--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,7 @@
             <h4>A new heading </h4>
             I have made some new local change
             </div>
+            <meta name="viewport" content="width=device-width,initial-scale=1"/>
             <link href="/ui/style.css" rel="stylesheet" />
             <script type="text/javascript" src="/ui/main.js">
         </script>
