--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
        
     </head>
     <body>
-        <div class="container">
+        <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
                 <br>
