[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
             </div>
             <meta name="viewport" content="width=device-width,initial-scale=1"/>
             <link href="/ui/style.css" rel="stylesheet" />
-            <script> alert('I,/m Javascript.!')
+            <script> alert("I'm Javascript.!")
             
             </script>
             <script type="text/javascript" src="/ui/main.js">
