[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,20 @@
        
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id='madi' src="C:\Users\Public\Pictures\Sample Pictures\penguins" class="img-medium"/>
+            <img id='madi' src="http://www.ibtimes.co.in/wedding-bells-actress-bhavana-south-indian-star-opens-about-her-beau-668333" class="img-medium"/>
         </div>
-                <br>
-        <div id='main-text'
-        class="center text-big bold">
-            Hi! I am denzzil and this is my first webapp.
-            <h4>A new heading </h4>
-            I have made some new local change
-            </div>
-            <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        <hr/>
+        <br>
+        <h3>Personal</h3> 
+        <div> Hi,Tis is bhavanas photo</div>
+       <br>
+        <hr/>
+        <h4>Professional</h4>
+        <div>She is a leading south indian actress</div>
+        </div>
+                    <meta name="viewport" content="width=device-width,initial-scale=1"/>
             <link href="/ui/style.css" rel="stylesheet" />
             <script> alert("I'm Javascript.!")
             
