[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img id='madi' src="http://www.ibtimes.co.in/wedding-bells-actress-bhavana-south-indian-star-opens-about-her-beau-668333" class="img-medium"/>
+            <img id='madi' src="http://www.indiancinemagallery.com/gallery/bhavana/103663/bhavana-in-life-of-josutty-(1)8869.html" class="img-medium"/>
         </div>
         <hr/>
         <br>
