[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img id='madi' src="https://www.facebook.com/photo.php?fbid=1821806521386761&set=a.1375740735993344.1073741828.100006722911632&type=3&theater" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/686953912813797376/r1KgLWzf.jpg" class="img-medium"/>
         </div>
         <hr/>
         <br>
