[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img id='madi' src="https://pbs.twimg.com/profile_images/686953912813797376/r1KgLWzf.jpg" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/441130727514460161/0EBRn4df_400x400.jpeg" class="img-medium"/>
         </div>
         <hr/>
         <br>
