[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
         <div class="center">
-            <img id='madi' src="https://pbs.twimg.com/profile_images/441130727514460161/0EBRn4df_400x400.jpeg" class="img-medium"/>
+            <img id='madi' src="https://scontent.fmaa1-2.fna.fbcdn.net/v/t1.0-1/c3.0.160.160/p160x160/10472791_1486744374892979_3288716708018707903_n.jpg?oh=ef33a53800400b0bf76d8e00c38e6da9&oe=589AF039" class="img-medium"/>
         </div>
         <hr/>
         <br>
