--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,8 @@
         <h4>Professional</h4>
         <div>She is a leading south indian actress</div>
         </div>
+        <hr/> <div class="footer">This button<button id="counter" >Click me!</button>has been clicked <span id="count">0
+        </span>times</div>
                     <meta name="viewport" content="width=device-width,initial-scale=1"/>
             <link href="/ui/style.css" rel="stylesheet" />
             <script> alert("I'm Javascript.!")
