--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         <h4>Professional</h4>
         <div>She is a leading south indian actress</div>
         </div>
-        <hr/> <div class="footer">This button<button id="counter" >Click me!</button>has been clicked <span id="count">0
+        <hr/> <div class="footer">This button<button id="counter + 1" >Click me!</button>has been clicked <span id="count">0
         </span>times</div>
                     <meta name="viewport" content="width=device-width,initial-scale=1"/>
             <link href="/ui/style.css" rel="stylesheet" />
