[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,8 +17,19 @@
         <h4>Professional</h4>
         <div>She is a leading south indian actress</div>
         </div>
-        <hr/> <div class="footer">This button<button id="counter" >Click me!</button>has been clicked <span id="count">0
-        </span>times</div>
+        <hr/> <div class="footer">
+        This button<button id="counter" >Click me!</button>has been clicked <span id="count">0
+        </span>times
+        <br/>
+        <input type="text" id="name" placeholder="name"></input>
+        <input type="submit" value="Submit"></input>
+        <ul>
+            <li>name1</li>
+            <li>name2</li>
+            <li>name3</li>
+        </ul>
+        </div> 
+        </div>
                     <meta name="viewport" content="width=device-width,initial-scale=1"/>
             <link href="/ui/style.css" rel="stylesheet" />
             <script type="text/javascript" src="/ui/main.js">
