--- a/ui/index.html
+++ b/ui/index.html
@@ -28,9 +28,7 @@
             <li>name2</li>
             <li>name3</li>
         </ul>
-        </div> 
-        
-                    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+        </div> </div>
             <link href="/ui/style.css" rel="stylesheet" />
             <script type="text/javascript" src="/ui/main.js">
         </script>
